# parallel-string-matching

./: CMakeLists.txt  README.md  main.cpp
include/: doc_search.hpp  matcher.hpp  utils.hpp  virus_search.hpp
output/: result_software.txt
src/: doc_search.cpp  matcher.cpp  utils.cpp  virus_search.cpp
test/: test_performance.cpp
